--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
     "artnet-protocol": "^0.2.1",
+    "finalhandler": "^1.2.0",
+    "serve-static": "^1.15.0",
     "ws": "^8.11.0"
   },
   "scripts": {
     "start": "node server.js"
   },
   "name": "hektopixel",
-  "type": "module",
   "version": "1.0.0",
   "main": "server.js",
   "repository": {
