--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
     "artnet-protocol": "^0.2.1",
-    "finalhandler": "^1.2.0",
-    "serve-static": "^1.15.0",
+    "express": "^4.18.2",
+    "https": "^1.0.0",
     "ws": "^8.11.0"
   },
   "scripts": {
