--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "artnet-protocol": "^0.2.1",
     "express": "^4.18.2",
     "https": "^1.0.0",
+    "uuid": "^9.0.0",
     "ws": "^8.11.0"
   },
   "scripts": {
